# xdu

./: Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  WARP.md  build.sh  cruft.sh  install.sh
.cargo/: config.toml
.github/workflows/: docker.yaml  release.yaml  test.yaml
doc/: xdu-find.1.scd  xdu-rm.1.scd  xdu-view.1.scd  xdu.1.scd
docs/: fast_crawl.md
src/: cli.rs  lib.rs  main.rs
tests/: crawl_tests.rs  rm_tests.rs
