[package]
name = "xdu"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
parquet = { version = "53", features = ["arrow"] }
arrow = { version = "53", features = ["chrono-tz"] }
walkdir = "2"
anyhow = "1"
parking_lot = "0.12"
indicatif = "0.17"
console = "0.15"
duckdb = { version = "1", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "xdu"
path = "src/bin/xdu.rs"

[[bin]]
name = "xdu-find"
path = "src/bin/xdu-find.rs"

[[bin]]
name = "xdu-view"
path = "src/bin/xdu-view.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
